@@ -22,20 +22,14 @@ test("satisfy 'v5or4 | $p | $p (= 3)'", [ 5, 4, 6, 3 ], 'double crossing, relati
 test("satisfy 'v5or4 | $q (= 7) | v6or4'", [ 5, 4, $uv, 6 ], 'partial crossing, other package in between');
 
 # sorting required
-TODO: {
-	local $TODO = 'sorting not implemented';
-	test("satisfy $p", [ 6, 5, 4, 3 ], 'no order');
-	test("satisfy v6or4", [ 6, 4 ], 'virtual package, sorting is required');
-	test("satisfy '$p (<< 5) | $p'", [ 4, 3, 6, 5 ], 'crossing, first relation (versioned) has preference');
-	test("satisfy '$p (= 3) | $p'", [ 3, 6, 5, 4 ], 'partial crossing, first relation (real) has preference');
-}
+test("satisfy $p", [ 6, 5, 4, 3 ], 'no order');
+test("satisfy v6or4", [ 6, 4 ], 'virtual package, sorting is required');
+test("satisfy '$p (<< 5) | $p'", [ 4, 3, 6, 5 ], 'crossing, first relation (versioned) has preference');
+test("satisfy '$p (= 3) | $p'", [ 3, 6, 5, 4 ], 'partial crossing, first relation (real) has preference');
 
 # multi-package
 test("satisfy '$q (= 3) | $p (= 4) | $q (= 5) | $p (= 6) | $q (= 7)'", [ $uv, 4, $uv, 6, $uv ], 'multi-package real relations, version intermix');
 test("satisfy mixed", [ 6, 3, $uv, $uv ], 'multi-package virtual relation, packages separately');
 test("satisfy '$q | mixed | v6or4 | $p'", [ $uv, $uv, $uv, 6, 3, 4, 5 ], 'a bit of everything');
-TODO: {
-	local $TODO = 'package sorting not implemented';
-	test("satisfy vxorp3", [ 3, $uv ], 'multi-package virtual relation, package order is alphabetic');
-}
+test("satisfy vxorp3", [ 3, $uv ], 'multi-package virtual relation, package order is alphabetic');
 
