@@ -3,6 +3,12 @@ cupt (2.8.3~) UNRELEASED; urgency=medium
   * lib:
     - config:
       - New option 'cupt::console::actions-preview::show-empty-versions'.
+    - system/resolvers/native:
+      - For equal-scored version change variants, propose higher versions
+        first. The regression for some typical upgrade situations was
+        introduced in 2.8.0, the regression for some typical non-upgrade
+        user requests was introduced in 2.6.0, and many non-typical cases
+        probably never worked before.
 
  -- Eugene V. Lyubimkin <jackyf@debian.org>  Fri, 03 Oct 2014 22:38:21 +0300
 
